--- a/info.yaml
+++ b/info.yaml
@@ -2,11 +2,11 @@
 project:
   wokwi_id:     425498175661927425       # Set this to the ID of your Wokwi project (the number from the project's URL)
   title:        "snake"      # Project title
-  author:       "oytis"      # Your name
+  author:       "Anton Gerasimov"      # Your name
   discord:      "oytis"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "a simple snake pattern on a 7-segment display"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     2       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
@@ -15,7 +15,7 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: "STEP"
+  ui[0]: "CLK"
   ui[1]: ""
   ui[2]: ""
   ui[3]: ""
